fix about border on smaller screens

--- a/page_style.css
+++ b/page_style.css
@@ -128,7 +128,7 @@ header {
 
 .hello img {
     border: 10px solid #2F80ED;
-    max-width: 300px;
+    max-width: 420px;
     transform: rotate(0deg);
     transition: all 0.2s;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.12), 0 2px 4px 0 rgba(0, 0, 0, 0.08);
@@ -136,7 +136,7 @@ header {
 
 .hello img:hover {
     border: 10px solid #2F80ED;
-    max-width: 300px;
+    max-width: 420px;
     text-align: Center;
     transform: rotate(-6deg) scale(1.1);
 }
@@ -533,6 +533,26 @@ img {
 }
 
 @media only screen and (max-width: 600px) {
+
+    .hello img {
+        max-width: 100%;
+    }
+
+    .hello img:hover {
+        max-width: 100%;
+    }
+
+    .area.one {
+        padding: 48px 24px;
+    }
+
+    .area.two {
+        padding: 48px 24px;
+    }
+
+    .area.three {
+        padding: 48px 24px;
+    }
 
     .header-content img {
         width: 100%;
